requirements and readme

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,13 @@
 absl-py==0.14.0
 astunparse==1.6.3
+Bootstrap-Flask==1.8.0
 cachetools==4.2.3
 certifi==2021.5.30
 charset-normalizer==2.0.6
 clang==5.0
+click==8.0.1
+colorama==0.4.4
+Flask==2.0.2
 flatbuffers==1.12
 gast==0.4.0
 google-auth==1.35.0
@@ -12,9 +16,12 @@ google-pasta==0.2.0
 grpcio==1.41.0
 h5py==3.1.0
 idna==3.2
+itsdangerous==2.0.1
+Jinja2==3.0.2
 keras==2.6.0
 Keras-Preprocessing==1.1.2
 Markdown==3.3.4
+MarkupSafe==2.0.1
 numpy==1.19.5
 oauthlib==3.1.1
 opt-einsum==3.3.0
